--- a/japanese/public/translations/224.csv
+++ b/japanese/public/translations/224.csv
@@ -2,19 +2,19 @@ textId,index,content
 i_68976749044a,224,太棒了，这就是百万美元夜景吗？真壮观。
 i_76316b5c688c,224,哇，好美！景色真棒。
 i_8a65e1653c2d,224,我明白香港为何被称为‘东方之珠’了。
-i_7e5748d04177,224,计划在这座太平山顶拍广告，您觉得如何？
-i_06708507d5e5,224,我有点在意，在山顶一边看夜景一边干杯，会不会不自然？
-i_d17f3ae7afe4,224,听您这么一说，确实……有什么好点子吗？
-i_31f5ed63c916,224,这样如何？改成夜游，从船上欣赏夜景并干杯。
+i_7e5748d04177,224,广告打算在维多利亚峰拍摄，怎么样？
+i_06708507d5e5,224,有一点我拿不准，在山顶边看夜景边干杯，是不是有点不自然？
+i_d17f3ae7afe4,224,你这么一说，确实。有什么好主意吗？
+i_31f5ed63c916,224,这样如何？场景设定为豪华夜景迅游，从船上欣赏夜景并干杯。怎么样？
 i_10f13dd91c72,224,好主意，说到香港，夜景绝不能少。
 i_52624c05dc7a,224,夜景与恋人们，在海上停泊的船上干杯……
 i_12e04eb449ac,224,那与张一心的形象也完美契合。
-i_b16ed7b5a7a3,224,或许连最后两人用‘金星’鸡尾酒干杯也可以省掉，面对如此美景，恋人们不需要酒也不需要礼物。
+i_b16ed7b5a7a3,224,或许，取消最后两个人用金星鸡尾酒干杯的场景都没关系。我觉得面对如此美景，恋人们是既不需要酒也不需要礼物的。
 i_5f76014f8190,224,完全不出现商品，最后只映出‘金星’二字，印象或许更强烈。
 i_0354c1c64ec8,224,我立刻修改剧本。
 i_68fdc675c2f6,224,拜托了。
-i_f249d61a46a3,224,对普通观众来说，广告常被视为打扰。确实，当紧张的比赛或感人的剧集被广告打断，会这么想也无可厚非。然而，几乎所有电视台都靠广告收入维持，因此说“让观众看广告才是播出的目的”也不为过。
-i_49812de7e56c,224,话虽如此，观众是为节目而非广告看电视，广告主、电视台与观众利益常对立。播广告方得绞尽脑汁，让不情愿的观众也别换台。
-i_61d2f8da69f2,224,例如，把商品或企业名称唱出来比说出来更易记，于是诞生广告歌；熟人推荐比陌生人更亲切，于是启用人气明星。世界顶尖明星或歌手出演广告并不稀奇，反之，也有演员因拍广告走红，歌曲因广告大卖。一天播多次，观众不知不觉就记住了脸和旋律。
-i_20e1f44cbcfb,224,日本常办广告大赛，获奖作品中不乏在15秒或30秒内完成精彩剧情的佳作，也有影像表现极佳者。此外，介绍企业贡献或传递环保等社会信息的广告也在增加，这些更重在传达企业形象，而非直接推销商品。
-i_6452c0b3a05f,224,广告，是为了不到一分钟的时间，而耗费巨大人力与财力制作的影像作品。
+i_f249d61a46a3,224,对普通观众而言，广告往往被视为一种干扰。当广告打断激动人心的体育赛事或扣人心弦的剧情时，这种感觉是可以理解的。然而，几乎所有广播电视台都依靠广告收入维持运营。因此，毫不夸张地说，广播的目的在于吸引观众观看广告，而非节目本身。
+i_49812de7e56c,224,也就是说，只要观众看电视是为了节目而不是为了看广告，广告商和广播公司的利益就永远与观众的利益相冲突，广告商就必须使出浑身解数来阻止观众换台。
+i_61d2f8da69f2,224,例如，商品名称或企业名称等，与其用语言说出来，不如编成歌曲更令人印象深刻，于是广告歌曲应运而生；比起不熟悉的人来说，由熟知的人来介绍商品会更容易接受，于是偶像明星被请来代言。事实上，甚至世界超一流的电影明星或歌手，出演广告的也绝非少数。另外，与此相反，因为出演广告成名的演员，以及因为被用于广告而走红的歌曲也不在少数。这是由于每天多次播放，人们在不知不觉中就记住了其面孔或旋律。
+i_20e1f44cbcfb,224,日本经常举办广告片比赛。其中获奖的广告片中，不乏在15秒或30秒的短暂时间内打造出精彩剧情的作品，以及在影像表现上出类拔萃的作品。此外，介绍企业贡献或传达有关环境问题等社会信息的广告片也越来越多。这些广告片与其说是直接宣传商品，不如说是为了传递企业形象本身。
+i_6452c0b3a05f,224,广告片虽然时长不到一分钟，但制作起来却需要耗费大量的时间和金钱。
