--- a/japanese/public/translations/212.csv
+++ b/japanese/public/translations/212.csv
@@ -15,7 +15,7 @@ i_7bdd4ab76505,212,太好了，谢谢。
 i_6fac92fca694,212,我才要谢谢您。这是我第一次参加日本的婚礼，对这次东京的采访工作更加期待了。
 i_93f061513ccc,212,中国是一个多民族国家，各民族使用的语言各不相同。同时，中文也并非只有一种，而是存在着相当多的方言。各种方言在发音、语法和词汇方面都存在着巨大差异。
 i_14c6925b3e6e,212,日语同样存在地域差异，包括发音、语法和词汇。
-i_fef4702a3284,212,首先，在发音和声调上就存在差异。例如"はし"这个词，既可以指"筷子"，也可以指"桥"。虽然它还有其他含义，我们暂且以这两种意思为例进行说明。
+i_fef4702a3284,212,首先，在发音和声调上就存在差异。例如'はし'这个词，既可以指'筷子'，也可以指'桥'。虽然它还有其他含义，我们暂且以这两种意思为例进行说明。
 i_d4ecefae1940,212,在共通语（东京方言）里，“箸”读高-低，“橋”读低-高。
 i_87a01d5ca7a9,212,①はし（高低）　　②はし（低高）
 i_77f1c8a66cd6,212,而在京都等关西地区，“箸”读成②，“橋”读成①，同一个音型在不同方言里意思相反。
